--- a/app/config.json
+++ b/app/config.json
@@ -1,11 +1,11 @@
 {
-  "name": "Hamish Williams",
-  "role": "Designer",
-  "disciplines": ["Developer", "Prototyper", "Animator", "Illustrator", "Modder"],
-  "url": "https://hamishw.com",
-  "bluesky": "hamishw.com",
-  "figma": "@Hamish",
-  "github": "HamishMW",
-  "repo": "https://github.com/HamishMW/portfolio",
+  "name": "Unique Olga",
+  "role": "Developer",
+  "disciplines": ["Designer", "Problem Solver", "Analyst", "Product Manager", "Creative"],
+  "url": "https://olgacodes.netlify.app",
+  "bluesky": "olgacodes.netlify.app",
+  "figma": "@olgacodes",
+  "github": "uniqueolgacodes",
+  "repo": "https://github.com/uniqueolgacodes",
   "ascii": "__  __  __\n\u005C \u005C \u005C \u005C \u005C\u2215\n \u005C \u005C\u2215\u005C \u005C\n  \u005C\u2215  \u005C\u2215\n"
 }
