--- a/app/config.json
+++ b/app/config.json
@@ -3,7 +3,7 @@
   "role": "Developer",
   "disciplines": ["Designer", "Problem Solver", "Analyst", "Product Manager", "Creative"],
   "url": "https://olgacodes.netlify.app",
-  "bluesky": "olgacodes.netlify.app",
+  "bluesky": "olgacodes.bsky.social",
   "figma": "@olgacodes",
   "github": "uniqueolgacodes",
   "repo": "https://github.com/uniqueolgacodes",
